@@ -51,7 +51,7 @@ import collections
 import copy
 import os
 import sys
-from distutils import sysconfig
+import sysconfig
 from typing import TYPE_CHECKING, Any, Dict, List, Optional, Set, Tuple, Union
 
 import astroid
@@ -449,14 +449,13 @@ class ImportsChecker(DeprecatedMixin, BaseChecker):
             return os.path.normcase(os.path.abspath(path))
 
         paths = set()
-        real_prefix = getattr(sys, "real_prefix", None)
-        for prefix in filter(None, (real_prefix, sys.prefix)):
-            path = sysconfig.get_python_lib(prefix=prefix)
-            path = _normalized_path(path)
-            paths.add(path)
+        path = sysconfig.get_path("purelib")
+        path = _normalized_path(path)
+        paths.add(path)
 
         # Handle Debian's derivatives /usr/local.
         if os.path.isfile("/etc/debian_version"):
+            real_prefix = getattr(sys, "real_prefix", None)
             for prefix in filter(None, (real_prefix, sys.prefix)):
                 libpython = os.path.join(
                     prefix,
